# 42_en_cours

./: README.md
CPP00/: sav1.cpp  sav2.cpp  save3.cpp
Cub3d/: Makefile  cub3d
GO_test/: go.mod  main.go  test_back
Inception/: Makefile
Libasm/: Makefile
Minishell1205/: Makefile
NM/: a.out  ft_ft.c  ft_nm.c  nm  nm.c  nmzeh.c  test  test.c  text.txt
PFDS/: Hello.py  format_ft_time.py
minishellMM3105/: CMakeLists.txt  Makefile
minishellMM3105/Config/: Header.mk  Sources.mk
minishellMM3105/includes/: mini_builtin.h  mini_exec.h  mini_struct.h  minishell.h
minishellMM3105/includes/parsing/: mini_parsing.h
minishellMM3105/libft/: Makefile
minishellMM3105/libft/srcs/: ft_split.c
minishellMM3105/srcs/: main.c
minishellMM3105/srcs/builtin/: built-inutils.c  built-inutils2.c  mini_cd.c  mini_echo.c  mini_env.c  mini_export.c  mini_pwd.c  mini_unset.c
minishellMM3105/srcs/exec/: exec.c  exec_builtin.c  exec_utils.c  exec_utils2.c
minishellMM3105/srcs/parsing/: mini_parsing.c  mini_parsing_env.c
minishellMM3105/srcs/parsing/quotes/: mini_double_quote.c  mini_parsing_quote.c  mini_single_quote.c
minishellMM3105/srcs/parsing/redirection/: mini_redirection.c  mini_redirection_first_part.c  mini_redirection_second_part.c
minishellMM3105/srcs/parsing/utils/: mini_push_int_tab.c  mini_return.c  mini_strjoin.c
minishellMM3105/srcs/utils/: mini_readline_utils.c
minishellMM3105/srcs/utils/tracker/Config/: Sources.mk
minishellMM3105/srcs/utils/tracker/include/: tracker.h
minishellMM3105/srcs/utils/tracker/srcs/: tracker.c  tracker_utils.c
(+566 files in other folders)
